istiodemo/etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  # annotations:
  #   auth.istio.io/2379: NONE
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    targetPort: 2379
    nodePort: 32379
    name: grpc
  type: NodePort
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    targetPort: 2379
    name: grpc
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:latest
        command: 
        - /usr/local/bin/etcd
        args:
        - --advertise-client-urls=http://localhost:2379
        - --listen-client-urls=http://0.0.0.0:2379
        ports:
        - containerPort: 2379
